--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.477.0",
     "mongoose": "^8.11.0",
